force-app/main/default/objects/DeploymentRun__c/DeploymentRun__c.object-meta.xml
<CustomObject>
    <description>Record of a deployment run execution</description>
    <label>Deployment Run</label>
    <nameField>
        <displayFormat>DEPLOY-{0000}</displayFormat>
        <label>Deployment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>