force-app/main/default/objects/DeploymentRun__c/fields/BackupCleanedUp__c.field-meta.xml
<CustomField>
    <fullName>BackupCleanedUp__c</fullName>
    <description>Whether the backup files have been cleaned up</description>
    <defaultValue>false</defaultValue>
    <label>Backup Cleaned Up</label>
    <type>Checkbox</type>
</CustomField>