force-app/main/default/objects/DeploymentRun__c/fields/BackupCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>BackupCreatedAt__c</fullName>
    <description>Date and time when backup was created for this deployment</description>
    <label>Backup Created At</label>
    <type>DateTime</type>
</CustomField>