force-app/main/default/objects/DeploymentRun__c/fields/BackupExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>BackupExpirationDate__c</fullName>
    <description>Date when backup reaches 90 days and notification should be sent</description>
    <label>Backup Expiration Date</label>
    <type>Date</type>
</CustomField>