force-app/main/default/objects/DeploymentRun__c/fields/BackupItemCount__c.field-meta.xml
<CustomField>
    <fullName>BackupItemCount__c</fullName>
    <description>Number of items backed up in this deployment</description>
    <label>Backup Item Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>