force-app/main/default/objects/DeploymentRun__c/fields/BackupNotificationSent__c.field-meta.xml
<CustomField>
    <fullName>BackupNotificationSent__c</fullName>
    <description>Whether the 90-day expiration notification has been sent</description>
    <defaultValue>false</defaultValue>
    <label>Backup Notification Sent</label>
    <type>Checkbox</type>
</CustomField>