force-app/main/default/objects/DeploymentRun__c/fields/BackupOwner__c.field-meta.xml
<CustomField>
    <fullName>BackupOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who should receive backup expiration notifications</description>
    <label>Backup Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DeploymentRunsAsBackupOwner</relationshipName>
    <type>Lookup</type>
</CustomField>