force-app/main/default/objects/DeploymentRun__c/fields/ChangePlan__c.field-meta.xml
<CustomField>
    <fullName>ChangePlan__c</fullName>
    <description>Parent change plan</description>
    <label>Change Plan</label>
    <referenceTo>ChangePlan__c</referenceTo>
    <relationshipLabel>Deployment Runs</relationshipLabel>
    <relationshipName>DeploymentRuns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>