force-app/main/default/objects/DeploymentRun__c/fields/ExternalDeploymentId__c.field-meta.xml
<CustomField>
    <fullName>ExternalDeploymentId__c</fullName>
    <description>Platform deployment ID for tracking</description>
    <externalId>true</externalId>
    <label>External Deployment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>