force-app/main/default/objects/DeploymentRun__c/fields/ResultsJson__c.field-meta.xml
<CustomField>
    <fullName>ResultsJson__c</fullName>
    <description>JSON results of the deployment</description>
    <label>Results JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>