force-app/main/default/objects/DeploymentRun__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <description>When the deployment started</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>