force-app/main/default/objects/DeploymentRun__c/fields/ValidateOnly__c.field-meta.xml
<CustomField>
    <fullName>ValidateOnly__c</fullName>
    <description>Whether this was a validate-only deployment</description>
    <defaultValue>false</defaultValue>
    <label>Validate Only</label>
    <type>Checkbox</type>
</CustomField>